--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>V Lady</title>
   <link rel="stylesheet" href="style.css" />
   <link
@@ -40,51 +40,48 @@
     THE LADY WHO LEADS
   </div>
 </div>
-<!-- Black Welcome Banner -->
-<div class="black-banner">
-  <div class="scrolling-text-black">
-    GET 50% OFF ON YOUR FIRST ORDER
-  </div>
-</div>
-<!-- Photo Banner Section -->
+<!-- 📸 Photo Banner Section with Moving Black Banner -->
 <section class="photo-banner">
-  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/portrait.jpg"><alt="Banner Image" class="banner-img" />
+  <img src="03707ba6e9c75473a6566df28f3e3642 (1).jpg" alt="Banner Image" class="banner-img" />
+
+
+
   <a href="#new-products" class="shop-now-btn">SHOP NOW</a>
 </section>
-<!-- 👜 New Product Category Navbar -->
+<!-- 👜 Product Category Navbar -->
 <section class="product-category-bar">
   <a href="All_Handbags.html" class="category-item">
-    <i class="bi bi-handbag-fill"></i>
+    <div class="category-img"></div>
     <p>All Handbags</p>
   </a>
 
   <a href="Candy_Bags.html" class="category-item">
-    <i class="bi bi-bag-fill"></i>
+    <div class="category-img"></div>
     <p>Candy Bags</p>
   </a>
 
   <a href="Pie_Bags.html" class="category-item">
-    <i class="bi bi-bag-heart-fill"></i>
+    <div class="category-img"></div>
     <p>Pie Bags</p>
   </a>
 
   <a href="Clutches.html" class="category-item">
-    <i class="bi bi-bag-plus-fill"></i>
+    <div class="category-img"></div>
     <p>Clutches</p>
   </a>
 
   <a href="accessories.html" class="category-item">
-    <i class="bi bi-plus-circle"></i>
+    <div class="category-img"></div>
     <p>Accessories</p>
   </a>
 
   <a href="wishlist.html" class="category-item">
-    <i class="bi bi-heart-fill"></i>
+    <div class="category-img"></div>
     <p>Wishlist</p>
   </a>
 
   <a href="New_Arrivals.html" class="category-item">
-    <i class="bi bi-instagram"></i>
+    <div class="category-img"></div>
     <p>Follow Us</p>
   </a>
 </section>
