--- a/Frontend/All_Handbags.html
+++ b/Frontend/All_Handbags.html
@@ -3,10 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>V LADY | Bags Collection</title>
+  <title>V LADY | All Handbags</title>
   <link rel="stylesheet" href="accessories.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <style>
+    .sold-out-badge {
+      display: none;
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: red;
+      color: white;
+      padding: 5px 10px;
+      font-weight: bold;
+      border-radius: 5px;
+      z-index: 10;
+    }
+    .wrapper.sold-out {
+      opacity: 0.6;
+      pointer-events: none;
+    }
+    .wrapper.sold-out .buy-now::after {
+      content: "SOLD OUT";
+      display: block;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
@@ -25,16 +50,13 @@
   </nav>
 </header>
 
-<!-- Pink Banner -->
 <div class="pink-banner">
   <div class="scrolling-text">THE LADY WHO LEADS</div>
 </div>
 
-<!-- ====== MAIN SECTION: PRODUCTS ====== -->
 <main class="bag-section">
   <h2>ALL HANDBAGS</h2>
 
-  <!-- === VIEW TOGGLE BUTTONS WITH ICONS === -->
   <div class="view-toggle">
     <button class="view-btn" data-columns="1" title="1 per row">
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -43,13 +65,6 @@
     </button>
 
     <button class="view-btn" data-columns="2" title="2 per row">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-        <rect x="3" y="3" width="8" height="18" rx="2" />
-        <rect x="13" y="3" width="8" height="18" rx="2" />
-      </svg>
-    </button>
-
-    <button class="view-btn" data-columns="4" title="4 per row">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <rect x="3" y="3" width="18" height="18" rx="2" />
@@ -58,7 +73,6 @@
       </svg>
     </button>
 
-    <!-- Wishlist Button -->
     <button class="view-btn wishlist-btn-toggle" title="View Wishlist" 
             onclick="window.location.href='wishlist.html'" 
             style="font-size:22px; color:#ff4d6d;">
@@ -69,22 +83,23 @@
   <div class="product-container">
 
     <!-- Product Card 1 -->
-    <div class="wrapper" data-product-id="chair001">
+    <div class="wrapper" data-product-id="bag001" data-sold-out="false">
+      <div class="sold-out-badge">SOLD OUT</div>
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
       </div>
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
+            <img src="IMG_6724.png" alt="Bag 1" />
           </a>
         </div>
         <div class="bottom">
           <div class="left">
             <div class="details">
-              <h1>Premium Clutch</h1>
-              <p class="discounted-price">₹1250</p>
-              <p class="mrp">MRP: <span>₹2200</span></p>
+              <h1>Handbag 1</h1>
+              <p class="discounted-price">₹1450</p>
+              <p class="mrp">MRP: <span>₹2500</span></p>
             </div>
             <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
             <div class="buy-now">BUY<br>NOW</div>
@@ -94,97 +109,23 @@
     </div>
 
     <!-- Product Card 2 -->
-    <div class="wrapper" data-product-id="chair002">
+    <div class="wrapper" data-product-id="bag002" data-sold-out="true">
+      <div class="sold-out-badge">SOLD OUT</div>
       <div class="wishlist-btn">
         <i class="material-icons">favorite_border</i>
       </div>
       <div class="container">
         <div class="top">
           <a href="productdetails.html">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
+            <img src="IMG_6725.PNG" alt="Bag 2" />
           </a>
         </div>
         <div class="bottom">
           <div class="left">
             <div class="details">
-              <h1>Premium Clutch</h1>
-              <p class="discounted-price">₹1250</p>
-              <p class="mrp">MRP: <span>₹2200</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Product Card 3 -->
-    <div class="wrapper" data-product-id="chair003">
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Premium Clutch</h1>
-              <p class="discounted-price">₹1250</p>
-              <p class="mrp">MRP: <span>₹2200</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Product Card 4 -->
-    <div class="wrapper" data-product-id="chair004">
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Premium Clutch</h1>
-              <p class="discounted-price">₹1250</p>
-              <p class="mrp">MRP: <span>₹2200</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Product Card 5 -->
-    <div class="wrapper" data-product-id="chair005">
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg" alt="Chair" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Premium Clutch</h1>
-              <p class="discounted-price">₹1250</p>
-              <p class="mrp">MRP: <span>₹2200</span></p>
+              <h1>Handbag 2</h1>
+              <p class="discounted-price">₹1750</p>
+              <p class="mrp">MRP: <span>₹2800</span></p>
             </div>
             <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
             <div class="buy-now">BUY<br>NOW</div>
@@ -197,26 +138,71 @@
 </main>
 
 <script>
+
+// === UNIVERSAL STORAGE FIX ===
+(function() {
+  const base = "vlady_global_storage_";
+  const originalGet = localStorage.getItem;
+  const originalSet = localStorage.setItem;
+  const originalRemove = localStorage.removeItem;
+  localStorage.getItem = function(key) { return originalGet.call(this, base + key); };
+  localStorage.setItem = function(key, value) { return originalSet.call(this, base + key, value); };
+  localStorage.removeItem = function(key) { return originalRemove.call(this, base + key); };
+})();
+
+// === Your existing code ===
+document.addEventListener("DOMContentLoaded", () => {
+  // rest of your Candy Bags or Pie Bags code...
+});
+
 document.addEventListener("DOMContentLoaded", () => {
   const productWrappers = document.querySelectorAll(".wrapper");
 
   productWrappers.forEach(wrapper => {
     const productId = wrapper.dataset.productId;
     const productName = wrapper.querySelector(".details h1").textContent;
-    const productPrice = wrapper.querySelector(".discounted-price").textContent;
-    const productMRP = wrapper.querySelector(".mrp span").textContent;
+    const productPrice = wrapper.querySelector(".details .discounted-price").textContent;
+    const productMRP = wrapper.querySelector(".details .mrp span")?.textContent || "";
     const productImage = wrapper.querySelector(".top img").src;
+    const soldOutStatus = wrapper.dataset.soldOut === "true";
 
     const product = {
       id: productId,
       name: productName,
       price: productPrice,
-      mrp: productMRP,  // Added MRP here
+      mrp: productMRP,
       image: productImage,
-      quantity: 1
+      quantity: 1,
+      soldOut: soldOutStatus
     };
 
-    // ----- Wishlist -----
+    const soldBadge = wrapper.querySelector(".sold-out-badge");
+    const addToCartBtn = wrapper.querySelector(".buy i");
+    const buyNowBtn = wrapper.querySelector(".buy-now");
+
+    if (soldOutStatus) {
+      wrapper.classList.add("sold-out");
+
+      if (soldBadge) soldBadge.style.display = "block";
+
+      if (addToCartBtn) {
+        addToCartBtn.style.pointerEvents = "none";
+        addToCartBtn.style.opacity = "0.5";
+      }
+
+      if (buyNowBtn) {
+        buyNowBtn.textContent = "";
+        buyNowBtn.style.background = "gray";
+        buyNowBtn.style.color = "white";
+        buyNowBtn.style.cursor = "not-allowed";
+        buyNowBtn.style.pointerEvents = "none";
+      }
+
+      wrapper.style.pointerEvents = "auto"; 
+      wrapper.querySelector(".top a").style.pointerEvents = "auto"; 
+      wrapper.querySelector(".wishlist-btn").style.pointerEvents = "auto";
+    }
+
     const wishlistBtn = wrapper.querySelector(".wishlist-btn i");
     let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
 
@@ -228,41 +214,31 @@ document.addEventListener("DOMContentLoaded", () => {
     wishlistBtn.addEventListener("click", () => {
       let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
       const exists = wishlist.find(p => p.id === productId);
-
       if (exists) {
         wishlist = wishlist.filter(p => p.id !== productId);
         wishlistBtn.textContent = "favorite_border";
         wishlistBtn.style.color = "white";
       } else {
-        wishlist.push(product); // Only change: product now includes MRP
+        wishlist.push(product);
         wishlistBtn.textContent = "favorite";
         wishlistBtn.style.color = "#ff4d6d";
       }
-
       localStorage.setItem("wishlist", JSON.stringify(wishlist));
+      alert(`${productName} updated in Wishlist!`);
     });
 
-    // ----- Add to Cart -----
-    const addToCartBtn = wrapper.querySelector(".buy i");
-    if (addToCartBtn) {
+    if (addToCartBtn && !soldOutStatus) {
       addToCartBtn.addEventListener("click", () => {
         let cart = JSON.parse(localStorage.getItem("cart")) || [];
         const existing = cart.find(p => p.id === productId);
-
-        if (existing) {
-          existing.quantity += 1;
-        } else {
-          cart.push({ ...product });
-        }
-
+        if (existing) existing.quantity += 1;
+        else cart.push({ ...product });
         localStorage.setItem("cart", JSON.stringify(cart));
-        alert(`${productName} added to cart 🛒`);
+        alert(`${productName} added to Cart 🛒`);
       });
     }
 
-    // ----- Buy Now -----
-    const buyNowBtn = wrapper.querySelector(".buy-now");
-    if (buyNowBtn) {
+    if (buyNowBtn && !soldOutStatus) {
       buyNowBtn.addEventListener("click", () => {
         let cart = JSON.parse(localStorage.getItem("cart")) || [];
         const existing = cart.find(p => p.id === productId);
@@ -272,8 +248,28 @@ document.addEventListener("DOMContentLoaded", () => {
       });
     }
   });
-});
 
+  const container = document.querySelector(".product-container");
+  const viewBtns = document.querySelectorAll(".view-toggle .view-btn");
+
+  if (window.innerWidth >= 769) {
+    container.classList.add("view-2");
+    container.classList.remove("view-1", "view-4");
+  }
+
+  viewBtns.forEach(btn => {
+    btn.addEventListener("click", () => {
+      const columns = btn.dataset.columns;
+      container.classList.remove("view-1", "view-2", "view-4");
+      container.classList.add(`view-${columns}`);
+    });
+  });
+});
 </script>
+
+<footer class="site-footer">
+  <p>© 2025 V Lady. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
