--- a/Frontend/accessories.html
+++ b/Frontend/accessories.html
@@ -39,10 +39,10 @@
   <div class="logo">V LADY<div class="tagline">Versatile Lady</div></div>
   <nav>
     <ul class="nav-links">
-      <li><a href="index.html"><i class="fa fa-house-chimney"></i></a></li>
+      <li><a href="mainpage.html"><i class="fa fa-house-chimney"></i></a></li>
       <li><a href="about.html"><i class="fa fa-circle-info"></i></a></li>
       <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-      <li><a href="index.html"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="mainpage.html"><i class="fa fa-envelope"></i></a></li>
     </ul>
   </nav>
 </header>
