--- a/Frontend/mainpage.html
+++ b/Frontend/mainpage.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>V Lady</title>
   <link rel="stylesheet" href="style.css" />
@@ -18,6 +17,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
   />
+  <script src="auth.js" defer></script>
 </head>
 <body>
   <header>
@@ -32,6 +32,7 @@
         <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         <li><a href="#contact-section"><i class="fa fa-envelope"></i></a></li>
         <li><a href="login.html"><i class="fa fa-user"></i></a></li>
+        <li><a href="profile.html" class="profile-link" style="display: none;"><i class="fa fa-user-circle"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -88,13 +89,12 @@
 </section>
 <!-- Photo Banner Section -->
 <section class="photo-banner1">
-  <img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"><alt="Banner Image" class="banner-img1" />
+  <img src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg" alt="Banner Image" class="banner-img1" />
   <a href="#under999" class="shop-now-btn1"> 999 </a>
 </section>
 
 <!-- 🛍 New Product Section -->
 <section class="new-products">
-  <section id="new-products"></section>
   <h2>FEATURED PRODUCTS</h2>
   <div class="product-container">
 
