integarted otp system and uploads folder

--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -9,20 +9,8 @@
 </head>
 <body>
   <div class="register-container">
-    <h2>Register</h2>
-    <form id="register-form">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required />
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required />
-      </div>
-      <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="login.html">Login here</a></p>
+    <h2>Register via Mobile</h2>
+    <p>This site uses mobile number + OTP for authentication. Please go to the <a href="/login">Login</a> page, enter your mobile number with the <code>+91</code> prefix and request an OTP to register or login.</p>
   </div>
-  <script src="register.js"></script>
 </body>
 </html>
