--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -2,27 +2,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>V Lady | Login</title>
-  <link rel="stylesheet" href="login.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>V Lady | Login</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required />
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required />
-      </div>
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="register.html">Register here</a></p>
-  </div>
-  <script src="login.js"></script>
+    <div class="login-container">
+        <h2>Login / Register</h2>
+        <div class="form-container">
+            <!-- Mobile Number Input -->
+            <div id="mobile-form">
+                <div class="form-group">
+                    <label for="mobile">Mobile Number (with +91)</label>
+                    <input type="tel" id="mobile" pattern="^\+91[1-9]\d{9}$" placeholder="+91XXXXXXXXXX" required>
+                </div>
+                <button onclick="sendOTP()">Get OTP</button>
+            </div>
+
+            <!-- OTP Verification Form (initially hidden) -->
+            <div id="otp-form" style="display: none;">
+                <div class="form-group">
+                    <label for="otp">Enter OTP</label>
+                    <input type="text" id="otp" maxlength="6" pattern="\d{6}" placeholder="Enter 6-digit OTP" required>
+                    <div class="otp-timer" id="otp-timer"></div>
+                </div>
+                <button onclick="verifyOTP()">Verify OTP</button>
+                <button class="resend-btn" onclick="sendOTP()" id="resend-btn" disabled>Resend OTP</button>
+            </div>
+
+            <!-- Profile Form (initially hidden) -->
+            <div id="profile-form" style="display: none;">
+                <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email (optional)</label>
+                    <input type="email" id="email">
+                </div>
+                <button onclick="updateProfile()">Complete Profile</button>
+            </div>
+        </div>
+    </div>
+    <script src="login.js"></script>
+        <!-- legacy username/password form removed: using OTP-based auth only -->
 </body>
 </html>
